kdevplatform (1.6.0-0r1) UNRELEASED; urgency=medium

  * New upstream release.

  * !! TODO !! figure out the ABI bump without SONAME bump

  [ Pino Toscano ]
  * Update copyright.
  * Update install files.
  * Bump the debhelper compatibility to 9:
    - bump compact to 9
    - bump the debhelper build dependency to 9

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jan 2014 13:56:19 +0100

kdevplatform (1.5.2-1) unstable; urgency=low

  * Team upload.
  * New upstream release.

  [ Andreas Cord-Landwehr ]
  * Re-enable GPL-3+ licensed SVN plugin due to fixed license issue in
    GPL-2+ licensed shared library kdevplatformoutputview (was GPL-2)
    (Closes: #719202)
  * Add libsvn-dev build dependency: needed for SVN plugin.
  * Update install files.
  * Update copyright.
  * Bump Standards-Version to 3.9.5: no changes needed.
  * Update debian/watch file to track xz compressed tarballs.

  [ Pino Toscano ]
  * kdevplatform7-libs.install: do not hardcode the minor grantlee version.
  * Update Vcs-* headers.

 -- Pino Toscano <pino@debian.org>  Sat, 18 Jan 2014 09:50:09 +0100

kdevplatform (1.5.1-2) unstable; urgency=low

  * Team upload. Upload to unstable.

 -- Pino Toscano <pino@debian.org>  Fri, 06 Sep 2013 14:30:21 +0200

kdevplatform (1.5.1-1) experimental; urgency=low

  [ Andreas Cord-Landwehr ]
  * New upstream release
  * Rename packages due to soname bump:
    - kdevplatform5-libs -> kdevplatform7-libs
    - libsublime5 -> libsublime7
  * Add build dependency to libgrantlee-dev (>= 0.1.7)
  * Raise kdelibs5-dev build-dependency (>=4:4.7.0)
  * Bump Standards-Version to 3.9.4: no changes needed.
  * Update copyright.
  * Disable compilation of SVN plugin due to license
    incompatability: patches/excludeSvnPluginFromCompilation.diff
  * Remove libsvn-dev build dependency: only needed for SVN plugin.

 -- Sune Vuorela <sune@debian.org>  Fri, 28 Jun 2013 09:22:12 +0200

kdevplatform (1.3.1-2) unstable; urgency=low
