@@ -10,6 +10,8 @@ kdevplatform (1.6.0-0r1) UNRELEASED; urgency=medium
   * Bump the debhelper compatibility to 9:
     - bump compact to 9
     - bump the debhelper build dependency to 9
+  * Convert rules to the dh sequencer with kde addon.
+  * Remove unused cdbs build dependency.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jan 2014 13:56:19 +0100
 
